--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel = "Shortcut Icon" href=favicon.ico> 
-<title>王亮❤婧仪</title>
+<title>大咩❤小皮</title>
 
 <style type="text/css">
 @font-face {
@@ -29,12 +29,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					小xn 可ua 爱zi，这是我们相爱在一起的时光：
+					小萌宝这是我们在一起的时光：
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					爱你直到永永远远。<br/>
-					<div class="signature">—— 亮</div>
+					爱你forever.<br/>
+					<div class="signature">—— 羊</div>
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2017, 1, 3);
+together.setFullYear(2018, 10, 13);
 together.setHours(0);
 together.setMinutes(43);
 together.setSeconds(47);
