--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 				<div id="loveu">
 					爱你forever.<br/>
-					<div class="signature">—— 羊</div>
+					<div class="signature">—— 肥羊</div>
 				</div>
 			</div>
 		</div>
